--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="./build/styles.css">
 </head>
 
-<body class="bg-[color:var(--bg-cream)] flex justify-center items-center">
+<body class="bg-[color:var(--bg-cream)]">
   <div
-    class="md:w-3/6 md:h-[52%] grid md:grid-cols-2 rounded-xl bg-white gap-0 sm:w-11/12 sm:grid-cols-1 sm:grid-rows-2 sm:h-5/6">
+    class="md:w-[50vw] md:h-[52vh] h-[95] grid md:grid-cols-2 rounded-xl bg-white gap-0 w-[95vw] grid-cols-1 grid-rows-2">
     <div class="h-fit">
       <picture>
         <source media="(max-width:480px)" srcset="./images/image-product-mobile.jpg">
